# MegapixelAO

./: README.md  SLM_iris.SLDPRT
ao/: CMakeLists.txt  README.md  setup.py
ao/projects/AO_closedloop/: AO_closedloop.cpp  CMakeLists.txt  gen_SLM_groundtruth.m  gen_SLM_images.cu  gen_SLM_images.h
ao/projects/AO_xy_alignment/: AO_xy_alignment.cpp  CMakeLists.txt  gen_microlensarray.m  gen_sensor_points.m
ao/projects/settings/: CMakeLists.txt  settings.cpp
ao/src/: addKernel.cuh  background_SLM.frag  background_SLM.vert  computeDCTweightsKernel.cuh  computemat_x_hatKernel.cuh  derivativesKernel.cuh  downscale_antiKernel.cuh  fista_rofKernel.cuh  flowCUDA.cu  flowCUDA.h  medianfilteringKernel.cuh  nablaKernel.cuh  nablaTKernel.cuh  prepare_cufft_warmup.cu  prepare_cufft_warmup.h  prepare_precomputations.cu  prepare_precomputations.h  prox_gKernel.cuh  upscaleKernel.cuh  visualize.cuh  warpingKernel.cuh  x_updateKernel.cuh
ao/temp/: SLM_sizes.txt  perspective_T.txt  sensor_sizes.txt
ao/tests/background_SLM/: CMakeLists.txt  background_SLM.cu
ao/tests/hardware_trigger/: CMakeLists.txt  hardware_trigger.cpp
ao/tests/shader/: CMakeLists.txt  shader.cpp
ao/tests/solver_accuracy/: CMakeLists.txt  fista_rof.cpp  fista_rof.m  solver_accuracy.cpp  test_fista_rof.m  test_wavefront_solver.m
ao/utils/: IO_helper_functions.h  common.h  cuda_gl_interop_helper_functions.h  flycapture2_helper_functions.h  glfw_helper_functions.h  opencv_helper_functions.h
sao/: README.md  imnoise_dB.m  sao_phasescreen.m  sao_wfs_CodedWavefrontSensor.m  sao_wfs_CurvatureWavefrontSensor.m  sao_wfs_shackhartmann.m
sao/tests/: test_phasescreen.m  test_wfs_CodedWavefrontSensor.m  test_wfs_CurvatureWavefrontSensor.m  test_wfs_ShackHartmann.m
sdoss/: README.md  demo_sdoss.m  demo_theory_test.m  sdoss_aperture.m  sdoss_gen_lenslets.m  sdoss_gen_mask.m  sdoss_gen_phasor.m  sdoss_gen_scalarU.m  sdoss_getmask.m  sdoss_getwavefront.m  sdoss_para_check.m  sdoss_propagation.m  sdoss_sensor.m
solvers/: main_wavefront_solver.m  tie_ours.m
utilities/: coolwarm.m  mydisplay.m  poisson_solver.m
